treewide: Split cutie-phone
- move the call listening daemon to cutie-phone-daemon
- move handling of ongoing and ringing calls to cutie-ongoing-call

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,8 @@ find_package(Qt6 REQUIRED COMPONENTS Core Quick Qml LinguistTools)
 
 qt_standard_project_setup()
 
-add_subdirectory(singleapplication)
-
 set(cutie-phone_SOURCES 
         src/main.cpp
-        src/phone.cpp
-        src/phone.h
 )
 
 qt_add_resources(APP_RESOURCES 
@@ -28,9 +24,8 @@ qt_add_translations(cutie-phone
 
 target_include_directories(cutie-phone PUBLIC src)
 
-target_link_libraries(cutie-phone PUBLIC Qt::Core Qt::Quick Qt::Qml Qt::DBus SingleApplication)
+target_link_libraries(cutie-phone PUBLIC Qt::Core Qt::Quick Qt::Qml Qt::DBus)
 
 install(TARGETS cutie-phone RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
 install(FILES cutie-phone.desktop DESTINATION "${CMAKE_INSTALL_DATADIR}/applications")
-install(FILES cutie-phone-autostart.desktop DESTINATION "/etc/xdg/autostart/")
 install(FILES cutie-phone.svg DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/scalable/apps")
